--- a/ticketorder_srvs/ticket_srv/config-dev.yaml
+++ b/ticketorder_srvs/ticket_srv/config-dev.yaml
@@ -2,10 +2,10 @@ nacos:
   host: '10.102.109.196'
   # host: '10.102.213.148'
   port: 8848
-  namespace: '0c56dfe6-d4a7-42ba-b2be-9502f91ece03'
+  namespace: '2bcef975-5415-46ab-b7d7-fdabcd634e58'
   user: 'nacos'
   password: 'nacos'
-  dataid: 'user-srv-dev.yaml'
+  dataid: 'ticketorder-srv-dev.yaml'
   group: 'dev'
   timeoutms: 5000
   cachedir: 'tmp/nacos/cache'
