--- a/ticketorder_web/ticketorder-web/config-dev.yaml
+++ b/ticketorder_web/ticketorder-web/config-dev.yaml
@@ -1,10 +1,10 @@
 nacos:
   host: '10.102.109.196'
   port: 8848
-  namespace: '018782e9-4d17-42a6-a34e-82663dccc547'
+  namespace: '2bcef975-5415-46ab-b7d7-fdabcd634e58'
   user: 'nacos'
   password: 'nacos'
-  dataid: 'user-web-dev.yaml'
+  dataid: 'ticketorder-web-dev.yaml'
   group: 'dev'
   timeoutms: 5000
   cachedir: 'tmp/nacos/cache'
